[workspace]
members = [
    "packages/types",
    "packages/solidity",
    "packages/union-ext",

    "chain/eth-eureka",
    "client/sp1-ics07",
    "plugins/client-update/sp1-ics07",
]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/srdtrk/ibc-eureka-plugins"
authors    = ["srdtrk <srdtrk.b@gmail.com>"]
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
ibc-eureka-types = { path = "./packages/types" }
ibc-eureka-solidity = { path = "./packages/solidity" }
ibc-eureka-union-ext = { path = "./packages/union-ext" }

tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false }
jsonrpsee = { version = "0.24.2", default-features = false }

serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }     # serde-json requires one of "std" or "alloc"

thiserror = { version = "1", default-features = false }

alloy = "0.5"
alloy-sol-types = "0.8"
alloy-contract = "0.5"

sp1-sdk = { version = "3.0.0", default-features = false }

sp1-ics07-tendermint-solidity = { git = "https://github.com/cosmos/sp1-ics07-tendermint", rev = "1a5b3eba62ae69b0bc1bd603c8d705b1ce82a3d0" }
sp1-ics07-tendermint-prover = { git = "https://github.com/cosmos/sp1-ics07-tendermint", rev = "1a5b3eba62ae69b0bc1bd603c8d705b1ce82a3d0" }
sp1-ics07-tendermint-utils = { git = "https://github.com/cosmos/sp1-ics07-tendermint", rev = "1a5b3eba62ae69b0bc1bd603c8d705b1ce82a3d0" }

ibc-client-tendermint-types = { version = "0.54", default-features = false }
tendermint-proto = { version = "0.38", default-features = false }
tendermint-rpc = { version = "0.38", default-features = false }
tendermint-light-client-verifier = { version = "0.38", default-features = false }
ibc-proto = { version = "0.47", default-features = false }

unionlabs = { git = "https://github.com/unionlabs/union", rev = "3d62619471020fa2e29975ffed08eb69782633d0" }
voyager-message = { git = "https://github.com/unionlabs/union", rev = "3d62619471020fa2e29975ffed08eb69782633d0" }
voyager-vm = { git = "https://github.com/unionlabs/union", rev = "3d62619471020fa2e29975ffed08eb69782633d0" }
beacon-api = { git = "https://github.com/unionlabs/union", rev = "3d62619471020fa2e29975ffed08eb69782633d0" }
chain-utils = { git = "https://github.com/unionlabs/union", rev = "3d62619471020fa2e29975ffed08eb69782633d0" }
serde-utils = { git = "https://github.com/unionlabs/union", rev = "3d62619471020fa2e29975ffed08eb69782633d0" }
