[workspace]
members = [
    "packages/types",
    "packages/solidity",
    "packages/union-ext",

    "chain/eth-eureka",
    "client/sp1-ics07",
    "plugins/client-update/sp1-ics07",
]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/srdtrk/ibc-eureka-plugins"
authors    = ["srdtrk <srdtrk.b@gmail.com>"]
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
ibc-eureka-types = { path = "./packages/types" }
ibc-eureka-solidity = { path = "./packages/solidity" }
ibc-eureka-union-ext = { path = "./packages/union-ext" }

tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false }
jsonrpsee = { version = "0.24.2", default-features = false }

serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }     # serde-json requires one of "std" or "alloc"

thiserror = { version = "1", default-features = false }

alloy = "0.5"
alloy-sol-types = "0.8"
alloy-contract = "0.5"

sp1-sdk = { version = "3.0.0", default-features = false }

sp1-ics07-tendermint-solidity = { git = "https://github.com/cosmos/sp1-ics07-tendermint", rev = "a3e3cf1961619a1657338b638531a4e8d0bd0991" }
sp1-ics07-tendermint-prover = { git = "https://github.com/cosmos/sp1-ics07-tendermint", rev = "a3e3cf1961619a1657338b638531a4e8d0bd0991" }
sp1-ics07-tendermint-utils = { git = "https://github.com/cosmos/sp1-ics07-tendermint", rev = "a3e3cf1961619a1657338b638531a4e8d0bd0991" }

ibc-client-tendermint-types = { version = "0.54", default-features = false }
tendermint-proto = { version = "0.38", default-features = false }
tendermint-rpc = { version = "0.38", default-features = false }
tendermint-light-client-verifier = { version = "0.38", default-features = false }
ibc-proto = { version = "0.47", default-features = false }

unionlabs = { git = "https://github.com/unionlabs/union", rev = "18c86b4ff81408d31bec998f5d23bc1b03c9fda3" }
voyager-message = { git = "https://github.com/unionlabs/union", rev = "18c86b4ff81408d31bec998f5d23bc1b03c9fda3" }
voyager-vm = { git = "https://github.com/unionlabs/union", rev = "18c86b4ff81408d31bec998f5d23bc1b03c9fda3" }
beacon-api = { git = "https://github.com/unionlabs/union", rev = "18c86b4ff81408d31bec998f5d23bc1b03c9fda3" }
chain-utils = { git = "https://github.com/unionlabs/union", rev = "18c86b4ff81408d31bec998f5d23bc1b03c9fda3" }
serde-utils = { git = "https://github.com/unionlabs/union", rev = "18c86b4ff81408d31bec998f5d23bc1b03c9fda3" }
ethereum-light-client-types = { git = "https://github.com/unionlabs/union", rev = "18c86b4ff81408d31bec998f5d23bc1b03c9fda3" }
