[package]
edition = "2021"
name    = "voyager-chain-module-ethereum-eureka"
version = "0.1.0"

[dependencies]
tokio              = { workspace = true }
futures            = { workspace = true }
reqwest            = { workspace = true }
jsonrpsee          = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
alloy	           = { workspace = true, features = ["full", "node-bindings"] }
unionlabs          = { workspace = true }
voyager-message    = { workspace = true }
voyager-vm         = { workspace = true }
chain-utils        = { workspace = true }
beacon-api         = { workspace = true }

sp1-ics07-tendermint-solidity = { workspace = true, features = ["rpc"] }
