[package]
edition = "2021"
name    = "voyager-transaction-plugin-eth-eureka"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ibc-eureka-types     = { workspace = true }
ibc-eureka-solidity  = { workspace = true, features = ["rpc"] }
ibc-eureka-union-ext = { workspace = true }
tokio                = { workspace = true }
futures              = { workspace = true }
reqwest              = { workspace = true }
jsonrpsee            = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
thiserror            = { workspace = true }
alloy	             = { workspace = true, features = ["full", "node-bindings"] }
unionlabs            = { workspace = true }
voyager-message      = { workspace = true }
voyager-vm           = { workspace = true }
chain-utils          = { workspace = true }
beacon-api           = { workspace = true }

ethereum-light-client-types = { workspace = true, features = ["serde"] }

sp1-ics07-tendermint-solidity = { workspace = true, features = ["rpc"] }
